--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bluebird": "^3.5.1",
     "flow-bin": "^0.63.1",
     "highlight.js": "^9.12.0",
+    "invariant": "^2.2.2",
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
     "markdown-it-highlightjs": "^3.0.0",
