--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bluebird": "^3.5.1",
+    "bulma": "^0.6.2",
     "flow-bin": "^0.63.1",
     "highlight.js": "^9.12.0",
     "invariant": "^2.2.2",
@@ -20,8 +21,6 @@
     "redux-thunk": "^2.2.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.77.1",
     "yargs": "^10.0.3"
   },
   "scripts": {
