--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.1",
     "redux-thunk": "^2.2.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
+    "validatorjs": "^3.14.2",
     "yargs": "^10.0.3"
   },
   "scripts": {
