--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
     "markdown-it-highlightjs": "^3.0.0",
+    "normalizr": "^3.2.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -36,6 +37,7 @@
     "flow": "flow"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "redux-devtools-extension": "^2.13.2"
   }
 }
