--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bulma": "^0.6.2",
     "flow-bin": "^0.63.1",
     "highlight.js": "^9.12.0",
+    "history": "^4.7.2",
     "invariant": "^2.2.2",
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
@@ -21,6 +22,8 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "redux-first-router": "^0.0.16-next",
+    "redux-first-router-link": "^1.4.2",
     "redux-form": "^7.2.1",
     "redux-thunk": "^2.2.0",
     "request": "^2.83.0",
