--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
     "markdown-it-highlightjs": "^3.0.0",
+    "moment": "^2.20.1",
     "normalizr": "^3.2.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
