--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "react-scripts": "1.0.17",
+    "react-scripts": "1.1",
     "redux": "^3.7.2",
     "redux-first-router": "^0.0.16-next",
     "redux-first-router-link": "^1.4.2",
     "redux-form": "^7.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2",
-    "validatorjs": "^3.14.2",
-    "yargs": "^10.0.3"
+    "validatorjs": "^3.14.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "flow-bin": "^0.64.0",
+    "flow-bin": "0.66",
     "redux-devtools-extension": "^2.13.2"
   }
 }
